samples/_failures_safe/1761091934_967a74_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0700611d.c: In function ‘main’:
./samples/SAFE/__tmp_0700611d.c:147:5: error: expected declaration or statement at end of input
  147 |     buffer_append(&compressed_buf, compressed_data, compressed_size);
      |     ^~~~~~~~~~~~~
